[gd_scene load_steps=10 format=2]

[ext_resource path="res://Code/shop.gd" type="Script" id=1]
[ext_resource path="res://Scenes/shop/item_skill.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Placeholder/Player/jump/adventurer-jump-00.png" type="Texture" id=3]
[ext_resource path="res://Art/Placeholder/Player/wall/adventurer-wall-slide-00.png" type="Texture" id=4]
[ext_resource path="res://Art/Placeholder/Player/fall/adventurer-fall-01.png" type="Texture" id=5]
[ext_resource path="res://Art/Placeholder/Player/hurt/adventurer-hurt-01.png" type="Texture" id=6]
[ext_resource path="res://Scenes/shop/coin_shop.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 0.972549, 0.956863, 0.956863, 1 )
font_data = SubResource( 1 )

[node name="shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.537255, 0.917647, 0.352941 )

[node name="main_container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -252.0
margin_right = 450.0
margin_bottom = 282.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="container_secondary" type="HBoxContainer" parent="main_container"]
margin_right = 900.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="conten_grind" type="CenterContainer" parent="main_container/container_secondary"]
margin_right = 790.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="grind_items" type="GridContainer" parent="main_container/container_secondary/conten_grind"]
margin_left = 170.0
margin_top = 80.0
margin_right = 620.0
margin_bottom = 390.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 0
columns = 3

[node name="double_jump" parent="main_container/container_secondary/conten_grind/grind_items" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 150.0
margin_bottom = 155.0
logo = ExtResource( 3 )
price = 300

[node name="grab_wall" parent="main_container/container_secondary/conten_grind/grind_items" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 0.0
margin_right = 300.0
margin_bottom = 155.0
size_flags_horizontal = 7
size_flags_vertical = 7
logo = ExtResource( 4 )
price = 1000
skill = "grab_wall"
description = "Grab wall"

[node name="low_gravity" parent="main_container/container_secondary/conten_grind/grind_items" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 0.0
margin_right = 450.0
margin_bottom = 155.0
size_flags_horizontal = 7
size_flags_vertical = 7
logo = ExtResource( 5 )
price = 2500
skill = "low_gravity"
description = "Low gravity"

[node name="inmunity" parent="main_container/container_secondary/conten_grind/grind_items" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 165.0
margin_right = 150.0
margin_bottom = 320.0
size_flags_horizontal = 7
size_flags_vertical = 7
logo = ExtResource( 6 )
price = 3000
skill = "inmunity"
description = "Inmunity"

[node name="container_info" type="CenterContainer" parent="main_container/container_secondary"]
margin_left = 800.0
margin_right = 900.0
margin_bottom = 470.0

[node name="coin_player" parent="main_container/container_secondary/container_info" instance=ExtResource( 7 )]
margin_top = 100.0
margin_right = 100.0
margin_bottom = 370.0

[node name="container_button" type="HBoxContainer" parent="main_container"]
margin_top = 480.0
margin_right = 900.0
margin_bottom = 534.0
custom_constants/separation = 10
alignment = 2

[node name="buy" type="Button" parent="main_container/container_button"]
margin_left = 690.0
margin_right = 790.0
margin_bottom = 54.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 2 )
text = "Buy"

[node name="exit" type="Button" parent="main_container/container_button"]
margin_left = 800.0
margin_right = 900.0
margin_bottom = 54.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 2 )
text = "Exit"
[connection signal="visibility_changed" from="." to="." method="_on_shop_visibility_changed"]
[connection signal="pressed" from="main_container/container_button/buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="main_container/container_button/exit" to="." method="_on_exit_pressed"]
